# rag-kmk

./: .gitignore  404.html  LICENSE  README.md  deploy.bat  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml
None/: chroma.sqlite3
changelog/: index.html
common/: common.md  index.html
contributing/: index.html
docs/: contributing.md  document_loader.md  index.md  installation.md  run_rag_kmk.md  usage.md
docs/examples/: intro.ipynb
document_loader/: index.html
examples/intro/: index.html
faq/: index.html
installation/: index.html
rag_kmk/: __init__.py  common.py  index.html  rag_kmk.md  run_rag_kmk.py
rag_kmk/chat_flow/: __init__.py  llm_interface.py
rag_kmk/config/: config custom.yaml  config.py  config.yaml
rag_kmk/knowledge_base/: __init__.py  document_loader.py  text_splitter.py  vectorizer.py
rag_kmk/utils/: __init__.py  config.py  file_utils.py  logging_utils.py  text_processing.py
rag_kmk/vector_db/: __init__.py  database.py  query.py
run_rag_kmk/: index.html
search/: search_index.json
tests/: __init__.py  test_config.yaml  test_knowledge_base.py  test_rag_kmk.py  test_utils.py
tests/sample_documents/: 01 Bio.docx  87 chatGpt Impact sunum.pptx
usage/: index.html  usage.md
